docs/target/debug/build/crossbeam-utils-f28476757bfbd8e9/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /rustc/5243ea5c29b136137c36bd773e5baa663790e097/library/core/src/sync/atomic.rs:2798:1
 ::: /rustc/5243ea5c29b136137c36bd773e5baa663790e097/library/core/src/sync/atomic.rs:2816:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
